--- a/src/components/earTraining/intervals/IntervalD.module.css
+++ b/src/components/earTraining/intervals/IntervalD.module.css
@@ -248,8 +248,18 @@
         height: 890px;
     }
 
+
     .expandedTitleBackground {
+        width: 300px;
         margin: 50px auto;
+    }
+
+    .title {
+        font-size: 2rem;
+    }
+
+    .song {
+        font-size: 1.2rem;
     }
 
     .btnContainer {
